<resources>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>


    <string name="app_name">LoL掌游宝</string>
    <string name="all_area">全部大区</string>
    <string name="one_area">艾欧尼亚</string>
    <string name="two_area">祖安</string>
    <string name="three_area">诺克萨斯</string>
    <string name="four_area">班德尔城</string>
    <string name="five_area">皮尔特沃夫</string>
    <string name="six_area">战争学院</string>
    <string name="seven_area">巨神峰</string>
    <string name="eight_area">雷瑟守备</string>
    <string name="nine_area">裁决之地</string>
    <string name="ten_area">黑色玫瑰</string>
    <string name="eleven_area">暗影岛</string>
    <string name="twelve_area">钢铁烈阳</string>
    <string name="thirteen_area">均衡教派</string>
    <string name="fourteen_area">水晶之痕</string>
    <string name="fifteen_area">影流</string>
    <string name="sixteen_area">守望之海</string>
    <string name="seventeen_area">征服之海</string>
    <string name="eighteen_area">卡拉曼达</string>
    <string name="nineteen_area">皮城警备</string>
    <string name="twenty_area">比尔吉沃特</string>
    <string name="twenty_one_area">德玛西亚</string>
    <string name="twenty_two_area">弗雷尔卓德</string>
    <string name="twenty_three_area">无畏先锋</string>
    <string name="twenty_four_area">恕瑞玛</string>
    <string name="twenty_five_area">扭曲丛林</string>
    <string name="twenty_six_area">巨龙之巢</string>
    <string name="twenty_seven_area">教育网专区</string>
    <string name="newest">最新</string>
    <string name="day_list">日榜</string>
    <string name="week_list">周榜</string>
    <string name="all_list">总榜</string>
    <string name="all">全部</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="name">以下是我们为您匹配的战友</string>
    <string name="matching">重新匹配</string>
    <string name="find">手动查找</string>
    <string name="summoner">召唤师</string>
    <string name="colon">:</string>
    <string name="leftbracket">(</string>
    <string name="rightbracket">)</string>
    <string name="fighting">战斗力</string>
    <string name="voice">开黑语音</string>
    <string name="city">所在城市</string>
    <string name="manifesto">约战宣言</string>
    <string name="publish">发布</string>
    <string name="publish_play">发布玩法</string>
    <string name="match_results">赛程</string>
    <string name="important_news">要闻</string>
    <string name="all_match">全部赛事</string>
    <string name="one_team">LPL</string>
    <string name="two_team">S5总决赛</string>
    <string name="three_team">MSI季中邀请赛</string>
    <string name="four_team">德玛西亚杯</string>
    <string name="five_team">IEM</string>
    <string name="six_team">LCK</string>
    <string name="seven_team">LCS北美</string>
    <string name="eight_team">LCS欧洲</string>
    <string name="nine_team">全明星赛</string>
    <string name="ten_team">S4总决赛</string>
    <string name="eleven_team">中韩对抗赛</string>
    <string name="times">场次</string>
    <string name="login_num">手机号/用户名/邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_btn">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="other_way">其他方式</string>
    <string name="search">搜索</string>
    <string name="hor">-</string>
    <string name="like">最佳搭档</string>
    <string name="hate">最佳克制</string>
    <string name="use_way">使用技巧</string>
    <string name="answer_way">应对技巧</string>
    <string name="description_hero">英雄背景</string>
    <string name="login_img">点击头像登录</string>
    <string name="my_collect">我的收藏</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="refresh">刷新</string>
    <string name="list">专辑列表</string>
    <string name="article">文章</string>
    <string name="hero">英雄</string>
    <string name="show">真人秀</string>
    <string name="enter">进入</string>
    <string name="play">晒玩法</string>
    <string name="find_friend">找战友</string>
    <string name="free">本期周免</string>
    <string name="free_one">周免</string>
    <string name="discount">折扣</string>
    <string name="publisher">发布者</string>
<<<<<<< HEAD
    <string name="free_publish">周免发布</string>
    <string name="publish_time">周三下午</string>
    <string name="exit">注销</string>
=======
>>>>>>> 946912944adbc1def3419ef8318c7545267f0068


</resources>
