<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_marginLeft"
            android:layout_marginTop="@dimen/layout_marginLeft">

            <TextView
                android:id="@+id/free_one"
                android:layout_width="wrap_content"
<<<<<<< HEAD
                android:layout_height="wrap_content" />
=======
                android:layout_height="wrap_content"
                android:text="@string/free" />
>>>>>>> 946912944adbc1def3419ef8318c7545267f0068

            <TextView
                android:id="@+id/free_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/free_one"
                android:text="@string/leftbracket" />
<<<<<<< HEAD
=======

            <TextView
                android:id="@+id/free_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/free_two"
                android:text="5/27" />

            <TextView
                android:id="@+id/free_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/free_three"
                android:text="@string/hor" />
>>>>>>> 946912944adbc1def3419ef8318c7545267f0068

            <TextView
                android:id="@+id/free_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
<<<<<<< HEAD
                android:layout_toRightOf="@id/free_two" />
=======
                android:layout_toRightOf="@id/free_four"
                android:text="6/3" />
>>>>>>> 946912944adbc1def3419ef8318c7545267f0068

            <TextView
                android:id="@+id/free_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
<<<<<<< HEAD
                android:layout_toRightOf="@id/free_time"
=======
                android:layout_toRightOf="@id/free_five"
>>>>>>> 946912944adbc1def3419ef8318c7545267f0068
                android:text="@string/rightbracket" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_marginRight"
            android:layout_marginTop="@dimen/layout_marginRight">

            <TextView
                android:id="@+id/free_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/publish_time" />

            <TextView
                android:id="@+id/free_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/free_seven"
                android:text="@string/colon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/free_eight"
                android:text="@string/free_publish" />

        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/free_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_marginLeft"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        android:paddingLeft="@dimen/layout_margin"
        android:paddingRight="@dimen/layout_margin" />
</LinearLayout>